--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -183,23 +183,31 @@ macro(find_graphics)
   if(NULLGL)
     target_compile_definitions(OpenSCAD PRIVATE NULLGL)
   else()
-    find_package(OpenCSG REQUIRED QUIET)
-    target_link_libraries(OpenSCAD PRIVATE ${OPENCSG_LIBRARY})
-    message(STATUS "OpenCSG: ${OPENCSG_VERSION_STRING}")
+    if(NOT USE_BUILTIN_OPENCSG)
+      find_package(OpenCSG REQUIRED QUIET)
+      target_link_libraries(OpenSCAD PRIVATE ${OPENCSG_LIBRARY})
+      message(STATUS "OpenCSG: ${OPENCSG_VERSION_STRING}")
+      if(MSVC)
+        find_path(OPENCSG_INCLUDE_DIRS opencsg/opencsg.h)
+        target_include_directories(OpenSCAD SYSTEM PRIVATE "${OPENCSG_INCLUDE_DIRS}/opencsg")
+      else()
+        find_path(OPENCSG_INCLUDE_DIRS opencsg.h)
+        target_include_directories(OpenSCAD SYSTEM PRIVATE ${OPENCSG_INCLUDE_DIRS})
+      endif()
+    else()
+      list(APPEND Sources ${OPENCSG_SOURCES})
+    endif()
     target_compile_definitions(OpenSCAD PRIVATE ENABLE_OPENCSG)
 
     if(MSVC)
       find_package(GLEW CONFIG REQUIRED QUIET)
-      find_path(OPENCSG_INCLUDE_DIRS opencsg/opencsg.h)
       message(STATUS "GLEW: Using target GLEW::GLEW")
-      target_include_directories(OpenSCAD SYSTEM PRIVATE "${OPENCSG_INCLUDE_DIRS}/opencsg")
       target_link_libraries(OpenSCAD PRIVATE GLEW::GLEW)
     else()
       find_package(GLEW REQUIRED)
-      find_path(OPENCSG_INCLUDE_DIRS opencsg.h)
       message(STATUS "GLEW_INCLUDE_DIR: ${GLEW_INCLUDE_DIR}")
       message(STATUS "GLEW_LIBRARY: ${GLEW_LIBRARY}")
-      target_include_directories(OpenSCAD SYSTEM PRIVATE ${GLEW_INCLUDE_DIR} ${OPENCSG_INCLUDE_DIRS})
+      target_include_directories(OpenSCAD SYSTEM PRIVATE ${GLEW_INCLUDE_DIR})
       target_link_libraries(OpenSCAD PRIVATE ${GLEW_LIBRARY})
     endif()
 
