--- a/.gitmodules
+++ b/.gitmodules
@@ -7,6 +7,6 @@
 [submodule "submodules/manifold"]
 	path = submodules/manifold
 	url = https://github.com/elalish/manifold
-[submodule "submodules/OpenCSG"]
+[submodule "OpenCSG"]
 	path = submodules/OpenCSG
-	url = git@github.com:kintel/OpenCSG.git
+	url = https://github.com/openscad/OpenCSG.git
